--- a/css/12-bool.css
+++ b/css/12-bool.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.container{
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
 .container::after{
   content: "";
   display: table;
